removed soundcloud component for now because of screen widening, fixed up logo size so it doesn't stretch by making width into maxwidth and set row margins to 0 in css file to prevent width stretching on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,8 @@ body{
   width:100vw;
   overflow:hidden;
 }
+
+.row{
+  margin-left:0px;
+  margin-right:0px;
+}
